Added new pictures, added poster url fallback image and fixed alt text

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         --background-color: #E3E6EA;
         ">
         <a class="fullsize-link" href="/work/nori"></a>
-            <video class="case-intro__pic" preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
+            <video class="case-intro__pic" poster="../assets/images/nori/nori-header.webp" preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
                 <source src="../assets/images/web-nori3.webm" type="video/webm" />
                 <source src="../assets/images/web-nori3.mp4" type="video/mp4" />
             </video>
@@ -166,7 +166,7 @@
         ">
 
             <a class="fullsize-link" href="/work/thredx"></a>
-            <video class="case-intro__pic" preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
+            <video class="case-intro__pic" poster="../assets/images/thredx/thredx-header.webp" preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
                 <source src="../assets/images/thredx-video-header.webm" type="video/webm" />
                 <source src="../assets/images/thredx-video-header.mp4" type="video/mp4" />
             </video>
@@ -225,7 +225,7 @@
             alt="shadow">
             
             <div class="wrapper-inner">
-                <h2 class="uppercase"  data-aos="fade" data-aos-offset="0">We value our craft<span class="img-text"><img src="../assets/images/img-2.webp" alt="image-1"></span>,have a deep passion for progression, and exist<span class="img-text"><img src="../assets/images/img-1.webp" alt="image-1"></span> to solve challenges for <span class="img-text"><img src="../assets/images/img-3.webp" alt="image-1"></span>brands we believe in. <br><br>Since the beginning, our mission has been to do great work and to have a great time doing it.</h2>
+                <h2 class="uppercase"  data-aos="fade" data-aos-offset="0">We value our craft<span class="img-text"><img src="../assets/images/img-2.webp" alt="image-2"></span>,have a deep passion for progression, and exist<span class="img-text"><img src="../assets/images/img-1.webp" alt="image-1"></span> to solve challenges for <span class="img-text"><img src="../assets/images/img-3.webp" alt="image-3"></span>brands we believe in. <br><br>Since the beginning, our mission has been to do great work and to have a great time doing it.</h2>
                 <div id="front-hand"  data-aos="fade" data-aos-offset="0"></div>
             </div>
         </div>
