--- a/work/420.html
+++ b/work/420.html
@@ -93,7 +93,7 @@
                     data-srcset="/assets/images/420/case-pic-1.webp 500w,
                     /assets/images/420/case-pic-1.webp 640w,
                     /assets/images/420/case-pic-1.webp 1024w"
-                    alt="420 website">
+                    alt="Friend Jen 420 campaign">
                 </figure>
             </div>
 
@@ -105,7 +105,7 @@
                     data-srcset="/assets/images/420/case-pic-2.webp 500w,
                     /assets/images/420/case-pic-2.webp 640w,
                     /assets/images/420/case-pic-2.webp 1024w"
-                    alt="420 website">
+                    alt="Friend Jen 420 campaign">
                 </figure>
             </div>
 
@@ -117,7 +117,7 @@
                     data-srcset="/assets/images/420/case-pic-3.webp 500w,
                     /assets/images/420/case-pic-3.webp 640w,
                     /assets/images/420/case-pic-3.webp 1024w"
-                    alt="420 website">
+                    alt="Friend Jen 420 campaign">
                 </figure>
             </div>
 
@@ -129,7 +129,7 @@
                     data-srcset="/assets/images/420/case-pic-4.webp 500w,
                     /assets/images/420/case-pic-4.webp 640w,
                     /assets/images/420/case-pic-4.webp 1024w"
-                    alt="420 website">
+                    alt="Friend Jen 420 campaign">
                 </figure>
             </div>
 
@@ -141,7 +141,7 @@
                     data-srcset="/assets/images/420/case-pic-5.webp 500w,
                     /assets/images/420/case-pic-5.webp 640w,
                     /assets/images/420/case-pic-5.webp 1024w"
-                    alt="420 website">
+                    alt="Friend Jen 420 campaign">
                 </figure>
             </div>
 
@@ -153,7 +153,7 @@
                     data-srcset="/assets/images/420/case-pic-6.webp 500w,
                     /assets/images/420/case-pic-6.webp 640w,
                     /assets/images/420/case-pic-6.webp 1024w"
-                    alt="420 website">
+                    alt="Friend Jen 420 campaign">
                 </figure>
             </div>
 
@@ -165,7 +165,7 @@
                     data-srcset="/assets/images/420/case-pic-7.webp 500w,
                     /assets/images/420/case-pic-7.webp 640w,
                     /assets/images/420/case-pic-7.webp 1024w"
-                    alt="420 website">
+                    alt="Friend Jen 420 campaign">
                 </figure>
             </div>
 
@@ -177,7 +177,7 @@
                     data-srcset="/assets/images/420/case-pic-8.webp 500w,
                     /assets/images/420/case-pic-8.webp 640w,
                     /assets/images/420/case-pic-8.webp 1024w"
-                    alt="420 website">
+                    alt="Friend Jen 420 campaign">
                 </figure>
             </div>
 
@@ -189,7 +189,7 @@
                     data-srcset="/assets/images/420/case-pic-9.webp 500w,
                     /assets/images/420/case-pic-9.webp 640w,
                     /assets/images/420/case-pic-9.webp 1024w"
-                    alt="420 website">
+                    alt="Friend Jen 420 campaign">
                 </figure>
             </div>
 
@@ -201,7 +201,7 @@
                     data-srcset="/assets/images/420/case-pic-10.webp 500w,
                     /assets/images/420/case-pic-10.webp 640w,
                     /assets/images/420/case-pic-10.webp 1024w"
-                    alt="420 website">
+                    alt="Friend Jen 420 campaign">
                 </figure>
             </div>
 
@@ -213,7 +213,7 @@
                     data-srcset="/assets/images/420/case-pic-11.webp 500w,
                     /assets/images/420/case-pic-11.webp 640w,
                     /assets/images/420/case-pic-11.webp 1024w"
-                    alt="420 website">
+                    alt="Friend Jen 420 campaign">
                 </figure>
             </div>
             
