--- a/work/glasin.html
+++ b/work/glasin.html
@@ -103,7 +103,7 @@
                     data-srcset="/assets/images/glasin/case-pic-1.webp 500w,
                     /assets/images/glasin/case-pic-1.webp 640w,
                     /assets/images/glasin/case-pic-1.webp 1024w"
-                    alt="Nori website">
+                    alt="Glasin website">
                 </figure>
             </div>
 
@@ -115,7 +115,7 @@
                     data-srcset="/assets/images/glasin/case-pic-2.webp 500w,
                     /assets/images/glasin/case-pic-2.webp 640w,
                     /assets/images/glasin/case-pic-2.webp 1024w"
-                    alt="Nori website">
+                    alt="Glasin website">
                 </figure>
             </div>
 
@@ -127,7 +127,7 @@
                     data-srcset="/assets/images/glasin/case-pic-3.webp 500w,
                     /assets/images/glasin/case-pic-3.webp 640w,
                     /assets/images/glasin/case-pic-3.webp 1024w"
-                    alt="Nori website">
+                    alt="Glasin website">
                 </figure>
             </div>
 
@@ -140,7 +140,7 @@
                     data-srcset="/assets/images/glasin/case-pic-4.webp 500w,
                     /assets/images/glasin/case-pic-4.webp 640w,
                     /assets/images/glasin/case-pic-4.webp 1024w"
-                    alt="Nori website">
+                    alt="Glasin website">
                 </figure>
             </div>
 
@@ -152,7 +152,7 @@
                     data-srcset="/assets/images/glasin/case-pic-5.webp 500w,
                     /assets/images/glasin/case-pic-5.webp 640w,
                     /assets/images/glasin/case-pic-5.webp 1024w"
-                    alt="Nori website">
+                    alt="Glasin website">
                 </figure>
             </div>
 
@@ -164,7 +164,7 @@
                     data-srcset="/assets/images/glasin/case-pic-6.webp 500w,
                     /assets/images/glasin/case-pic-6.webp 640w,
                     /assets/images/glasin/case-pic-6.webp 1024w"
-                    alt="Nori website">
+                    alt="Glasin website">
                 </figure>
             </div>
 
@@ -176,7 +176,7 @@
                     data-srcset="/assets/images/glasin/case-pic-7.webp 500w,
                     /assets/images/glasin/case-pic-7.webp 640w,
                     /assets/images/glasin/case-pic-7.webp 1024w"
-                    alt="Nori website">
+                    alt="Glasin website">
                 </figure>
             </div>
         </div>
@@ -190,7 +190,7 @@
                     data-srcset="/assets/images/glasin/case-pic-8.webp 500w,
                     /assets/images/glasin/case-pic-8.webp 640w,
                     /assets/images/glasin/case-pic-8.webp 1024w"
-                    alt="Nori website">
+                    alt="Glasin website">
                 </figure>
             </div>
 
