--- a/work/glyfit.html
+++ b/work/glyfit.html
@@ -77,7 +77,7 @@
             data-srcset="/assets/images/glyfit/glyfit-header.webp 500w,
             /assets/images/glyfit/glyfit-header.webp 640w,
             /assets/images/glyfit/glyfit-header.webp 1024w"
-            alt="Norikit intro picture">
+            alt="Glyfit intro picture">
         </figure>
 
         <div class="wrapper-inner wrapper-inner--footer-margin">
