--- a/work/index.html
+++ b/work/index.html
@@ -71,16 +71,16 @@
         </header>
     
         <div class="wrapper-inner">
-            <h1 g-component="SeparateText" g-options='{"delay": 0.25}' class="big-header-one">All work <del>No Play</del></h1>
+            <h1 g-component="SeparateText" g-options='{"delay": 0.25}' class="big-header-one">All work No Play</h1>
         </div>
 
         <div class="case-wrapper">
 
             <div class="case-row">
-                <article class="case-medium" data-aos="fade-up" data-aos-offset="0">
+                <article class="case-medium" data-aos="fade-up" data-aos-offset="0" data-aos-delay="300">
                     <div class="case-medium__inner">
                         <a class="fullsize-link" href="./nori"></a>
-                        <video class="case-intro__pic" preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
+                        <video class="case-intro__pic" poster="../assets/images/nori/nori-header.webp" preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
                             <source src="../assets/images/case-intro-full/web-nori3.webm" type="video/webm" />
                             <source src="../assets/images/case-intro-full/web-nori3.mp4" type="video/mp4" />
                         </video>
@@ -89,7 +89,7 @@
                     </div>
                 </article>
 
-                <article class="case-medium-large" data-aos="fade-up" data-aos-offset="0">
+                <article class="case-medium-large" data-aos="fade-up" data-aos-offset="0" data-aos-delay="500">
                     <div class="case-medium__inner">
                         <a class="fullsize-link" href="./thredx"></a>
                         <img src="/assets/images/case-intro-full/thredx.webp" alt="thredx">
