--- a/work/mtn.html
+++ b/work/mtn.html
@@ -99,7 +99,7 @@
                     data-srcset="/assets/images/mtn/case-pic-1.webp 500w,
                     /assets/images/mtn/case-pic-1.webp 640w,
                     /assets/images/mtn/case-pic-1.webp 1024w"
-                    alt="Nori website">
+                    alt="Montana website">
                 </figure>
             </div>
 
@@ -111,7 +111,7 @@
                     data-srcset="/assets/images/mtn/case-pic-2.webp 500w,
                     /assets/images/mtn/case-pic-2.webp 640w,
                     /assets/images/mtn/case-pic-2.webp 1024w"
-                    alt="Nori website">
+                    alt="Montana website">
                 </figure>
             </div>
 
@@ -123,7 +123,7 @@
                     data-srcset="/assets/images/mtn/case-pic-3.webp 500w,
                     /assets/images/mtn/case-pic-3.webp 640w,
                     /assets/images/mtn/case-pic-3.webp 1024w"
-                    alt="Nori website">
+                    alt="Montana website">
                 </figure>
             </div>
 
@@ -135,7 +135,19 @@
                     data-srcset="/assets/images/mtn/case-pic-4.webp 500w,
                     /assets/images/mtn/case-pic-4.webp 640w,
                     /assets/images/mtn/case-pic-4.webp 1024w"
-                    alt="Nori website">
+                    alt="Montana website">
+                </figure>
+            </div>
+
+            <div class="col col-12 full-width-pic no-margin" data-aos="fade-up" data-aos-offset="0">
+                <figure class="case-pic">
+                    <img class="lazyload" src="/assets/images/mtn/case-pic-10.webp" 
+                    data-sizes="auto" 
+                    data-src="/assets/images/mtn/case-pic-10.webp"
+                    data-srcset="/assets/images/mtn/case-pic-10.webp 500w,
+                    /assets/images/mtn/case-pic-10.webp 640w,
+                    /assets/images/mtn/case-pic-10.webp 1024w"
+                    alt="Montana website">
                 </figure>
             </div>
 
@@ -147,7 +159,7 @@
                     data-srcset="/assets/images/mtn/case-pic-5.webp 500w,
                     /assets/images/mtn/case-pic-5.webp 640w,
                     /assets/images/mtn/case-pic-5.webp 1024w"
-                    alt="Nori website">
+                    alt="Montana website">
                 </figure>
             </div>
 
@@ -159,7 +171,7 @@
                     data-srcset="/assets/images/mtn/case-pic-9.webp 500w,
                     /assets/images/mtn/case-pic-9.webp 640w,
                     /assets/images/mtn/case-pic-9.webp 1024w"
-                    alt="Nori website">
+                    alt="Montana website">
                 </figure>
             </div>
         </div>
@@ -183,7 +195,7 @@
                     data-srcset="/assets/images/mtn/case-pic-6.webp 500w,
                     /assets/images/mtn/case-pic-6.webp 640w,
                     /assets/images/mtn/case-pic-6.webp 1024w"
-                    alt="Nori website">
+                    alt="Montana website">
                 </figure>
             </div>
 
@@ -195,7 +207,7 @@
                     data-srcset="/assets/images/mtn/case-pic-7.webp 500w,
                     /assets/images/mtn/case-pic-7.webp 640w,
                     /assets/images/mtn/case-pic-7.webp 1024w"
-                    alt="Nori website">
+                    alt="Montana website">
                 </figure>
             </div>
 
