--- a/work/nori.html
+++ b/work/nori.html
@@ -72,7 +72,7 @@
             </nav>
         </header>
         <figure class="case-header">
-            <video preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
+            <video preload="none" poster="../assets/images/nori/nori-header.webp" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
                 <source src="../assets/images/web-nori3.webm" type="video/webm" />
                 <source src="../assets/images/web-nori3.mp4" type="video/mp4" />
             </video>
@@ -122,7 +122,7 @@
                     data-srcset="/assets/images/nori/case-pic-2.webp 500w,
                     /assets/images/nori/case-pic-2.webp 640w,
                     /assets/images/nori/case-pic-2.webp 1024w"
-                    alt="Nori website">
+                    alt="Nori website 2">
                 </figure>
             </div>
 
@@ -134,7 +134,7 @@
                     data-srcset="/assets/images/nori/case-pic-3.webp 500w,
                     /assets/images/nori/case-pic-3.webp 640w,
                     /assets/images/nori/case-pic-3.webp 1024w"
-                    alt="Nori website">
+                    alt="Nori website 3">
                 </figure>
             </div>
         </div>
@@ -163,7 +163,7 @@
                     data-srcset="/assets/images/nori/kit-3.webp 500w,
                     /assets/images/nori/kit-3.webp 640w,
                     /assets/images/nori/kit-3.webp 1024w"
-                    alt="Nori website">
+                    alt="Nori website 4">
                 </figure>
             </div>
 
@@ -175,7 +175,7 @@
                     data-srcset="/assets/images/nori/kit-2.webp 500w,
                     /assets/images/nori/kit-2.webp 640w,
                     /assets/images/nori/kit-2.webp 1024w"
-                    alt="Nori website">
+                    alt="Nori website 5">
                 </figure>
             </div>
 
@@ -187,7 +187,7 @@
                     data-srcset="/assets/images/nori/kit-1.webp 500w,
                     /assets/images/nori/kit-1.webp 640w,
                     /assets/images/nori/kit-1.webp 1024w"
-                    alt="Nori website">
+                    alt="Nori website 6">
                 </figure>
             </div>
 
@@ -199,8 +199,116 @@
                     data-srcset="/assets/images/nori/kit-4.webp 500w,
                     /assets/images/nori/kit-4.webp 640w,
                     /assets/images/nori/kit-4.webp 1024w"
-                    alt="Nori website">
+                    alt="Nori website 7">
                 </figure>
+            </div>
+
+            <div class="col col-6" data-aos="fade-up" data-aos-offset="0">
+                <figure class="case-pic">
+                    <img class="lazyload" src="/assets/images/nori/kit-5.webp" 
+                    data-sizes="auto" 
+                    data-src="/assets/images/nori/kit-5.webp"
+                    data-srcset="/assets/images/nori/kit-5.webp 500w,
+                    /assets/images/nori/kit-5.webp 640w,
+                    /assets/images/nori/kit-5.webp 1024w"
+                    alt="Nori website 8">
+                </figure>
+            </div>
+
+            <div class="col col-6" data-aos="fade-up" data-aos-offset="0">
+                <figure class="case-pic">
+                    <img class="lazyload" src="/assets/images/nori/kit-6.webp" 
+                    data-sizes="auto" 
+                    data-src="/assets/images/nori/kit-6.webp"
+                    data-srcset="/assets/images/nori/kit-6.webp 500w,
+                    /assets/images/nori/kit-6.webp 640w,
+                    /assets/images/nori/kit-6.webp 1024w"
+                    alt="Nori website 9">
+                </figure>
+            </div>
+
+            <div class="col col-6" data-aos="fade-up" data-aos-offset="0">
+                <figure class="case-pic">
+                    <img class="lazyload" src="/assets/images/nori/kit-7.webp" 
+                    data-sizes="auto" 
+                    data-src="/assets/images/nori/kit-7.webp"
+                    data-srcset="/assets/images/nori/kit-7.webp 500w,
+                    /assets/images/nori/kit-7.webp 640w,
+                    /assets/images/nori/kit-7.webp 1024w"
+                    alt="Nori website 10">
+                </figure>
+            </div>
+
+            <div class="col col-6 col--big-margin" data-aos="fade-up" data-aos-offset="0">
+                <figure class="case-pic">
+                    <img class="lazyload" src="/assets/images/nori/kit-8.webp" 
+                    data-sizes="auto" 
+                    data-src="/assets/images/nori/kit-8.webp"
+                    data-srcset="/assets/images/nori/kit-8.webp 500w,
+                    /assets/images/nori/kit-8.webp 640w,
+                    /assets/images/nori/kit-8.webp 1024w"
+                    alt="Nori website 11">
+                </figure>
+            </div>
+
+            <div class="col col-6 col--text" data-aos="fade" data-aos-offset="0">
+                <h2>An animated explainer</h2>
+            </div>
+
+            <div class="col col-6" data-aos="fade" data-aos-offset="0">
+                <p>An animated explainer is the best way to promote something, and we really wanted to capture what Nori Kit is all about in a 30 seconds clip. Below you'll find some stills and the final videio</p>
+            </div>
+
+            <div class="col col-6" data-aos="fade-up" data-aos-offset="0">
+                <figure class="case-pic">
+                    <img class="lazyload" src="/assets/images/nori/explainer-1.webp" 
+                    data-sizes="auto" 
+                    data-src="/assets/images/nori/explainer-1.webp"
+                    data-srcset="/assets/images/nori/explainer-1.webp 500w,
+                    /assets/images/nori/explainer-1.webp 640w,
+                    /assets/images/nori/explainer-1.webp 1024w"
+                    alt="Nori website 12">
+                </figure>
+            </div>
+
+            <div class="col col-6" data-aos="fade-up" data-aos-offset="0">
+                <figure class="case-pic">
+                    <img class="lazyload" src="/assets/images/nori/explainer-2.webp" 
+                    data-sizes="auto" 
+                    data-src="/assets/images/nori/explainer-2.webp"
+                    data-srcset="/assets/images/nori/explainer-2.webp 500w,
+                    /assets/images/nori/explainer-2.webp 640w,
+                    /assets/images/nori/explainer-2.webp 1024w"
+                    alt="Nori website 13">
+                </figure>
+            </div>
+
+            <div class="col col-6" data-aos="fade-up" data-aos-offset="0">
+                <figure class="case-pic">
+                    <img class="lazyload" src="/assets/images/nori/explainer-3.webp" 
+                    data-sizes="auto" 
+                    data-src="/assets/images/nori/explainer-3.webp"
+                    data-srcset="/assets/images/nori/explainer-3.webp 500w,
+                    /assets/images/nori/explainer-3.webp 640w,
+                    /assets/images/nori/explainer-3.webp 1024w"
+                    alt="Nori website 14">
+                </figure>
+            </div>
+
+            <div class="col col-6" data-aos="fade-up" data-aos-offset="0">
+                <figure class="case-pic">
+                    <img class="lazyload" src="/assets/images/nori/explainer-4.webp" 
+                    data-sizes="auto" 
+                    data-src="/assets/images/nori/explainer-4.webp"
+                    data-srcset="/assets/images/nori/explainer-4.webp 500w,
+                    /assets/images/nori/explainer-4.webp 640w,
+                    /assets/images/nori/explainer-4.webp 1024w"
+                    alt="Nori website 15">
+                </figure>
+            </div>
+
+            <div class="col col-8 push-3-11" data-aos="fade-up" data-aos-offset="0">
+                <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/739905800?h=e8447bf393&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Nori kit intro video"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
             </div>
         </div>
 
