--- a/work/thredx.html
+++ b/work/thredx.html
@@ -71,7 +71,7 @@
             </nav>
         </header>
         <figure class="case-header">
-            <video preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
+            <video preload="none" poster="../assets/images/thredx/thredx-header.webp" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
                 <source src="../assets/images/thredx-video-header.webm" type="video/webm" />
                 <source src="../assets/images/thredx-video-header.mp4" type="video/mp4" />
             </video>
@@ -116,7 +116,7 @@
                     data-srcset="/assets/images/thredx/case-pic-2.webp 500w,
                     /assets/images/thredx/case-pic-2.webp 640w,
                     /assets/images/thredx/case-pic-2.webp 1024w"
-                    alt="thredx website">
+                    alt="thredx website 2">
                 </figure>
             </div>
 
@@ -128,7 +128,7 @@
                     data-srcset="/assets/images/thredx/case-pic-3.webp 500w,
                     /assets/images/thredx/case-pic-3.webp 640w,
                     /assets/images/thredx/case-pic-3.webp 1024w"
-                    alt="thredx website">
+                    alt="thredx website 3">
                 </figure>
             </div>
 
@@ -140,7 +140,7 @@
                     data-srcset="/assets/images/thredx/case-pic-4.webp 500w,
                     /assets/images/thredx/case-pic-4.webp 640w,
                     /assets/images/thredx/case-pic-4.webp 1024w"
-                    alt="thredx website">
+                    alt="thredx website 4">
                 </figure>
             </div>
 
@@ -152,7 +152,7 @@
                     data-srcset="/assets/images/thredx/case-pic-5.webp 500w
                     /assets/images/thredx/case-pic-5.webp 640w,
                     /assets/images/thredx/case-pic-5.webp 1024w"
-                    alt="thredx website">
+                    alt="thredx website 5">
                 </figure>
             </div>
 
@@ -164,7 +164,7 @@
                     data-srcset="/assets/images/thredx/case-pic-6.webp 500w
                     /assets/images/thredx/case-pic-6.webp 640w,
                     /assets/images/thredx/case-pic-6.webp 1024w"
-                    alt="thredx website">
+                    alt="thredx website 6">
                 </figure>
             </div>
 
@@ -176,7 +176,7 @@
                     data-srcset="/assets/images/thredx/case-pic-7.webp 500w
                     /assets/images/thredx/case-pic-7.webp 640w,
                     /assets/images/thredx/case-pic-7.webp 1024w"
-                    alt="thredx website">
+                    alt="thredx website 7">
                 </figure>
             </div>
 
@@ -188,7 +188,7 @@
                     data-srcset="/assets/images/thredx/case-pic-8.webp 500w
                     /assets/images/thredx/case-pic-8.webp 640w,
                     /assets/images/thredx/case-pic-8.webp 1024w"
-                    alt="thredx website">
+                    alt="thredx website 8">
                 </figure>
             </div>
         </div>
@@ -215,7 +215,7 @@
                     data-srcset="/assets/images/thredx/case-pic-18.webp 500w,
                     /assets/images/thredx/case-pic-18.webp 640w,
                     /assets/images/thredx/case-pic-18.webp 1024w"
-                    alt="thredx website">
+                    alt="thredx website 10">
                 </figure>
             </div>
 
@@ -227,7 +227,7 @@
                     data-srcset="/assets/images/thredx/case-pic-19.webp 500w,
                     /assets/images/thredx/case-pic-19.webp 640w,
                     /assets/images/thredx/case-pic-19.webp 1024w"
-                    alt="thredx website">
+                    alt="thredx website 11">
                 </figure>
             </div>
 
@@ -239,7 +239,7 @@
                     data-srcset="/assets/images/thredx/case-pic-20.webp 500w,
                     /assets/images/thredx/case-pic-20.webp 640w,
                     /assets/images/thredx/case-pic-20.webp 1024w"
-                    alt="thredx website">
+                    alt="thredx website 12">
                 </figure>
             </div>
 
@@ -251,7 +251,7 @@
                     data-srcset="/assets/images/thredx/case-pic-9.webp 500w
                     /assets/images/thredx/case-pic-9.webp 640w,
                     /assets/images/thredx/case-pic-9.webp 1024w"
-                    alt="thredx website">
+                    alt="thredx website 13">
                 </figure>
             </div>
 
@@ -263,7 +263,7 @@
                     data-srcset="/assets/images/thredx/case-pic-10.webp 500w
                     /assets/images/thredx/case-pic-10.webp 640w,
                     /assets/images/thredx/case-pic-10.webp 1024w"
-                    alt="thredx website">
+                    alt="thredx website 14">
                 </figure>
             </div>
 
@@ -275,7 +275,7 @@
                     data-srcset="/assets/images/thredx/case-pic-11.webp 500w
                     /assets/images/thredx/case-pic-11.webp 640w,
                     /assets/images/thredx/case-pic-11.webp 1024w"
-                    alt="thredx website">
+                    alt="thredx website 15">
                 </figure>
             </div>
 
@@ -287,7 +287,7 @@
                     data-srcset="/assets/images/thredx/case-pic-12.webp 500w
                     /assets/images/thredx/case-pic-12.webp 640w,
                     /assets/images/thredx/case-pic-12.webp 1024w"
-                    alt="thredx website">
+                    alt="thredx website 16">
                 </figure>
             </div>
 
@@ -299,7 +299,7 @@
                     data-srcset="/assets/images/thredx/case-pic-13.webp 500w
                     /assets/images/thredx/case-pic-13.webp 640w,
                     /assets/images/thredx/case-pic-13.webp 1024w"
-                    alt="thredx website">
+                    alt="thredx website 17">
                 </figure>
             </div>
 
@@ -311,7 +311,7 @@
                     data-srcset="/assets/images/thredx/case-pic-14.webp 500w
                     /assets/images/thredx/case-pic-14.webp 640w,
                     /assets/images/thredx/case-pic-14.webp 1024w"
-                    alt="thredx website">
+                    alt="thredx website 18">
                 </figure>
             </div>
 
@@ -323,7 +323,7 @@
                     data-srcset="/assets/images/thredx/case-pic-15.webp 500w
                     /assets/images/thredx/case-pic-15.webp 640w,
                     /assets/images/thredx/case-pic-15.webp 1024w"
-                    alt="thredx website">
+                    alt="thredx website 19">
                 </figure>
             </div>
 
@@ -335,7 +335,7 @@
                     data-srcset="/assets/images/thredx/case-pic-16.webp 500w
                     /assets/images/thredx/case-pic-16.webp 640w,
                     /assets/images/thredx/case-pic-16.webp 1024w"
-                    alt="thredx website">
+                    alt="thredx website 20">
                 </figure>
             </div>
 
@@ -347,7 +347,7 @@
                     data-srcset="/assets/images/thredx/case-pic-17.webp 500w
                     /assets/images/thredx/case-pic-17.webp 640w,
                     /assets/images/thredx/case-pic-17.webp 1024w"
-                    alt="thredx website">
+                    alt="thredx website 21">
                 </figure>
             </div>
         </div>
