--- a/work/lightstage.html
+++ b/work/lightstage.html
@@ -102,7 +102,7 @@
                     data-srcset="/assets/images/ls/case-pic-1.webp 500w,
                     /assets/images/ls/case-pic-1.webp 640w,
                     /assets/images/ls/case-pic-1.webp 1024w"
-                    alt="Nori website">
+                    alt="Light Stage branding">
                 </figure>
             </div>
 
@@ -114,7 +114,7 @@
                     data-srcset="/assets/images/ls/case-pic-2.webp 500w,
                     /assets/images/ls/case-pic-2.webp 640w,
                     /assets/images/ls/case-pic-2.webp 1024w"
-                    alt="Nori website">
+                    alt="Light Stage branding">
                 </figure>
             </div>
 
@@ -126,7 +126,7 @@
                     data-srcset="/assets/images/ls/case-pic-3.webp 500w,
                     /assets/images/ls/case-pic-3.webp 640w,
                     /assets/images/ls/case-pic-3.webp 1024w"
-                    alt="Nori website">
+                    alt="Light Stage branding">
                 </figure>
             </div>
 
@@ -138,7 +138,7 @@
                     data-srcset="/assets/images/ls/case-pic-4.webp 500w,
                     /assets/images/ls/case-pic-4.webp 640w,
                     /assets/images/ls/case-pic-4.webp 1024w"
-                    alt="Nori website">
+                    alt="Light Stage branding">
                 </figure>
             </div>
 
@@ -150,7 +150,7 @@
                     data-srcset="/assets/images/ls/case-pic-5.webp 500w,
                     /assets/images/ls/case-pic-5.webp 640w,
                     /assets/images/ls/case-pic-5.webp 1024w"
-                    alt="Nori website">
+                    alt="Light Stage branding">
                 </figure>
             </div>
 
@@ -162,7 +162,7 @@
                     data-srcset="/assets/images/ls/case-pic-6.webp 500w,
                     /assets/images/ls/case-pic-6.webp 640w,
                     /assets/images/ls/case-pic-6.webp 1024w"
-                    alt="Nori website">
+                    alt="Light Stage branding">
                 </figure>
             </div>
 
@@ -174,7 +174,7 @@
                     data-srcset="/assets/images/ls/case-pic-7.webp 500w,
                     /assets/images/ls/case-pic-7.webp 640w,
                     /assets/images/ls/case-pic-7.webp 1024w"
-                    alt="Nori website">
+                    alt="Light Stage branding">
                 </figure>
             </div>
 
@@ -186,7 +186,7 @@
                     data-srcset="/assets/images/ls/case-pic-8.webp 500w,
                     /assets/images/ls/case-pic-8.webp 640w,
                     /assets/images/ls/case-pic-8.webp 1024w"
-                    alt="Nori website">
+                    alt="Light Stage branding">
                 </figure>
             </div>
         </div>
