Added poster image to background front header

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
 
             <div class="header-big__bg">
-                <video class="show-reel" preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
+                <video class="show-reel" poster="../assets/images/bg-webm.webp" preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
                     <source src="../assets/images/bg-web.webm" type="video/webm" />
                     <source src="../assets/images/bg-web.mp4" type="video/mp4" />
                 </video>
