Changed norikit to Nori Kit

--- a/work/index.html
+++ b/work/index.html
@@ -84,7 +84,7 @@
                             <source src="../assets/images/case-intro-full/web-nori3.webm" type="video/webm" />
                             <source src="../assets/images/case-intro-full/web-nori3.mp4" type="video/mp4" />
                         </video>
-                        <h2 class="heading-four">Stunning prototypes with Norikit</h2>
+                        <h2 class="heading-four">Stunning prototypes with Nori Kit</h2>
                         <p class="case-intro-paragraph">How we made the smartest wireframe kit for Figma</p>
                     </div>
                 </article>
