--- a/work/nori.html
+++ b/work/nori.html
@@ -80,7 +80,7 @@
 
         <div class="wrapper-inner">
             <div class="col col-6 col--text" data-aos="fade-up" data-aos-offset="0">
-                <h1>Stunning prototypes with Norikit</h1>
+                <h1>Stunning prototypes with Nori Kit</h1>
             </div>
 
             <div class="col col-6" data-aos="fade-up" data-aos-offset="0">
