Removed poster image cus of lag

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
 
             <div class="header-big__bg">
-                <video class="show-reel" poster="../assets/images/bg-webm.webp" preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
+                <video class="show-reel" preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
                     <source src="../assets/images/bg-web.webm" type="video/webm" />
                     <source src="../assets/images/bg-web.mp4" type="video/mp4" />
                 </video>
@@ -137,7 +137,7 @@
         --background-color: #E3E6EA;
         ">
         <a class="fullsize-link" href="/work/nori"></a>
-            <video class="case-intro__pic" poster="../assets/images/nori/nori-header.webp" preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
+            <video class="case-intro__pic" preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
                 <source src="../assets/images/web-nori3.webm" type="video/webm" />
                 <source src="../assets/images/web-nori3.mp4" type="video/mp4" />
             </video>
@@ -166,7 +166,7 @@
         ">
 
             <a class="fullsize-link" href="/work/thredx"></a>
-            <video class="case-intro__pic" poster="../assets/images/thredx/thredx-header.webp" preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
+            <video class="case-intro__pic" preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
                 <source src="../assets/images/thredx-video-header.webm" type="video/webm" />
                 <source src="../assets/images/thredx-video-header.mp4" type="video/mp4" />
             </video>
