--- a/work/index.html
+++ b/work/index.html
@@ -80,7 +80,7 @@
                 <article class="case-medium" data-aos="fade-up" data-aos-offset="0" data-aos-delay="500">
                     <div class="case-medium__inner">
                         <a class="fullsize-link" href="./nori"></a>
-                        <video class="case-intro__pic" poster="../assets/images/nori/nori-header.webp" preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
+                        <video class="case-intro__pic" preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
                             <source src="../assets/images/case-intro-full/web-nori3.webm" type="video/webm" />
                             <source src="../assets/images/case-intro-full/web-nori3.mp4" type="video/mp4" />
                         </video>
