--- a/work/nori.html
+++ b/work/nori.html
@@ -72,7 +72,7 @@
             </nav>
         </header>
         <figure class="case-header">
-            <video preload="none" poster="../assets/images/nori/nori-header.webp" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
+            <video preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
                 <source src="../assets/images/web-nori3.webm" type="video/webm" />
                 <source src="../assets/images/web-nori3.mp4" type="video/mp4" />
             </video>
