Fixed margin on about col 2

--- a/about/index.html
+++ b/about/index.html
@@ -92,11 +92,11 @@
         <img src="../assets/images/brick-red-wall.svg" alt="" class="no-max red-brick">
         
         <div class="wrapper-inner wrapper-inner--burgundy">
-            <div class="col col-6" data-aos="fade" data-aos-offset="0">
+            <div class="col col-6 col--no-margin" data-aos="fade" data-aos-offset="0">
                 <h2>We believe in that invention beats convention</h2>
             </div>
 
-            <div class="col col-6" data-aos="fade" data-aos-offset="0">
+            <div class="col col-6 col--no-margin" data-aos="fade" data-aos-offset="0">
                 <p>
                     As project partners we help our clients to discover and take ownership of their brand's unique role in the world. We don't work with particular industries, instead we try to work with brands we respect, forging partnerships and treading new ground with each piece of work.
                 </p>
