--- a/about/index.html
+++ b/about/index.html
@@ -122,7 +122,7 @@
             <div class="col col-12">
                 <h2 data-aos="fade" data-aos-offset="0">Awards n’ stuff</h2>
                 <div class="row" data-aos="fade" data-aos-offset="0">
-                    <p class="col col-7">We know that awards work well! Both - for us and you. Here’s a few recognitions that we’ve recivied, which we are very greatful for.</p>
+                    <p class="col col-7 col--no-margin">We know that awards work well! Both - for us and you. Here’s a few recognitions that we’ve recivied, which we are very greatful for.</p>
                     
                     <ul class="col col-5 list">
                         <li>2x Honourable Mention Awwwards</li>
