Removed hand and fixed margin footer front

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             </div>
         </article>
 
-        <div class="wrapper">
+        <div class="wrapper wrapper--margin">
             <img class="shadow-front lazyload" src="./assets/images/shadow-dissolve.webp" 
             data-sizes="auto" 
             data-src="./assets/images/shadow-dissolve.webp"
@@ -226,7 +226,6 @@
             
             <div class="wrapper-inner">
                 <h2 class="uppercase"  data-aos="fade" data-aos-offset="0">We value our craft<span class="img-text"><img src="../assets/images/img-2.webp" alt="image-2"></span>,have a deep passion for progression, and exist<span class="img-text"><img src="../assets/images/img-1.webp" alt="image-1"></span> to solve challenges for <span class="img-text"><img src="../assets/images/img-3.webp" alt="image-3"></span>brands we believe in. <br><br>Since the beginning, our mission has been to do great work and to have a great time doing it.</h2>
-                <div id="front-hand"  data-aos="fade" data-aos-offset="0"></div>
             </div>
         </div>
 
