--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <span g-component="SeparateText" class="swoosh-title title-2">colorful illustrations</span>
                 <span g-component="SeparateText" class="swoosh-title title-3">impactful products</span>
                 <span g-component="SeparateText" class="swoosh-title title-4">incredible apps</span>
-                <span g-component="SeparateText" class="swoosh-title title-5">unforgetable brands</span>
+                <span g-component="SeparateText" class="swoosh-title title-5">unforgettable brands</span>
             </h2>
             <div class="btn-wrapper animate__animated animate__fadeIn">
                 <a href="/work"                 
