Added youtube player to shop

--- a/shop/index.html
+++ b/shop/index.html
@@ -120,7 +120,23 @@
                         <h2 class="heading-four">Vimeo Player</h2>
                         <span class="shop-item__price paragraph">Free</span>
                     </div>
-                    <p class="shop-item__text">We’ve created a custom vimeo player for your hi-fi designs<br>pixel perfect and made for Figma.</p>
+                    <p class="shop-item__text">We’ve created a custom Vimeo player for your hi-fi designs<br>pixel perfect and made for Figma.</p>
+                </article>
+
+                <article class="shop-item animate__animated animate__fadeInUp">
+                    <a href="https://www.figma.com/community/file/1149653441163726102" target="_blank" class="fullsize-link"></a>
+                    <img class="shop-item__pic lazyload" src="../assets/images/shop/youtube-pic-shop.webp" 
+                    data-sizes="auto" 
+                    data-src="../assets/images/shop/youtube-pic-shop.webp"
+                    data-srcset="../assets/images/shop/youtube-pic-shop.webp 500w,
+                    ../assets/images/shop/youtube-pic-shop.webp 640w,
+                    ../assets/images/shop/youtube-pic-shop.webp 1024w"
+                    alt="Vimeo player intro picture">
+                    <div class="shop-item__details">
+                        <h2 class="heading-four">Youtube Player</h2>
+                        <span class="shop-item__price paragraph">Free</span>
+                    </div>
+                    <p class="shop-item__text">We’ve created a custom Youtube player for your hi-fi designs<br>pixel perfect and made for Figma.</p>
                 </article>
             </section>
         </div>
