Removed br tag from shop youtube

--- a/shop/index.html
+++ b/shop/index.html
@@ -136,7 +136,7 @@
                         <h2 class="heading-four">Youtube Player</h2>
                         <span class="shop-item__price paragraph">Free</span>
                     </div>
-                    <p class="shop-item__text">We’ve created a custom Youtube player for your hi-fi designs<br>pixel perfect and made for Figma.</p>
+                    <p class="shop-item__text">We’ve created a custom Youtube player for your hi-fi designs pixel perfect and made for Figma.</p>
                 </article>
             </section>
         </div>
